Fixing spacing of grid items

--- a/styles.css
+++ b/styles.css
@@ -162,7 +162,6 @@ main {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        align-items: end;
     }
     #page-title, #page-desc {
         margin: 0;
@@ -198,8 +197,8 @@ main {
     }
 }
 @media (min-width: 1440px) {
-    main {
-        gap: 4rem;
+    .product-desc {
+        width: 100%;
     }
     #page-title {
         font-size: 3rem;
@@ -210,6 +209,9 @@ main {
     }
 }
 @media (min-width: 1700px) {
+    .product-desc {
+        padding-left: 10rem;
+    }
     #page-desc {
         width: 70%;
     }
